--- a/index.html
+++ b/index.html
@@ -100,14 +100,12 @@
           <div class="col-md-6 col-lg-4 mb-3">
             <div class="card">
               <div class="card-body text-center p-5">
-                <img src="./assets/avatar.png" alt="avatar" class=" img img-fluid rounded-circle mb-3">
-                <h3 class="title card-title mb-3">Nombre y Apellido</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, dolorum. Ea minima ut ratione fugiat
-                  commodi voluptas debitis quae repellendus, asperiores, iste recusandae blanditiis architecto
-                  voluptatum natus laboriosam maxime libero!</p>
+                <img src="./assets/avatar-mc.png" alt="avatar" class=" img img-fluid rounded-circle mb-3">
+                <h3 class="title card-title mb-3">Mariano E. Cruz</h3>
+                <p>Hola! Soy desarrollador FullStack, con 1 año de experiencia. Mis lenguajes favoritos son Java y TypeScript. Poseo conocimientos en HTML, CSS, Angular, Git, MySql, JWT, Hibernate y Spring Boot. Fanatico de Linux, actualmente estoy usando Kubuntu. </p>
                 <a href="#"><i class="bi bi-twitter text-dark mx-1 lead"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1 lead"></i></a>
-                <a href="#"><i class="bi bi-github text-dark mx-1 lead"></i></a>
+                <a href="https://www.linkedin.com/in/marianoecruz/"><i class="bi bi-linkedin text-dark mx-1 lead"></i></a>
+                <a href="https://github.com/pantera2580"><i class="bi bi-github text-dark mx-1 lead"></i></a>
               </div>
             </div>
           </div>
